fixed loading on project section on launch on mobile

--- a/style.css
+++ b/style.css
@@ -1564,7 +1564,7 @@ footer {
 
 @media (max-width: 600px) {
   .project-carousel-container {
-    min-height: 320px;
+    min-height: 0;
     max-width: 98vw;
   }
   .project-carousel-card img {
